fixed nav gap

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,7 +62,7 @@ footer {
 
 section,
 footer,
-nav {
+header {
   min-width: 1024px;
 }
 @media screen and (min-width: 1024px) {
